# ic-auth-plugin

./: .gitignore  Cargo.toml  README.md  SPEC.md
client/: Cargo.toml
client/examples/: pk.rs
client/src/: identity.rs  lib.rs
hsm-plugin/: Cargo.toml
hsm-plugin/src/: cli.rs  main.rs
ii-plugin/: Cargo.toml
pkcs11-plugin/: Cargo.toml  default-config.toml
pkcs11-plugin/src/: cli.rs  main.rs
types/: Cargo.toml
types/src/: b64.rs  lib.rs
