[workspace]
resolver = "3"
members = ["types", "client", "hsm-plugin", "ii-plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
directories = "6.0"
ic-agent = "0.40.0"
ic-auth-plugin-types = { path = "types", version = "0.1.0" }
ic_principal = "0.1"
ic-transport-types = "0.40"
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.44"
toml = "0.8"

[profile.release]
opt-level = 2
