[workspace]
resolver = "3"
members = ["types", "client", "hsm-plugin", "ii-plugin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
directories = "6.0"
ic-agent = { version = "0.40.0", git = "https://github.com/dfinity/agent-rs.git", rev = "686c249adb80aac58b466e654827d8b9dcfe00f4" }
ic-auth-plugin-types = { path = "types", version = "0.1.0" }
ic_principal = "0.1"
ic-transport-types = { version = "0.40", git = "https://github.com/dfinity/agent-rs.git", rev = "686c249adb80aac58b466e654827d8b9dcfe00f4" }
pico-args = { version = "0.5", features = ["eq-separator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.44"
toml = "0.8"

[profile.release]
opt-level = 2
