[package]
name = "ic-auth-plugin-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.44.1", features = ["process", "io-util"] }
ic-auth-plugin-types.workspace = true
ic-transport-types.workspace = true
serde_json = "1.0.140"
thiserror = "2.0.12"
ic_principal.workspace = true
