[package]
name = "ic-auth-plugin-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.44.1", features = ["process", "io-util"] }
ic-auth-plugin-types.workspace = true
ic-transport-types.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ic_principal.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
