[package]
name = "ic-auth-plugin-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
futures = "0.3.31"
ic-agent = { workspace = true, optional = true }
ic-auth-plugin-types.workspace = true
ic-transport-types.workspace = true
ic_principal.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.44.1", features = ["process", "io-util"] }

[features]
default = ["identity"]
identity = ["dep:ic-agent"]

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
