[package]
name = "pkcs11-ic-auth-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
ic-agent = "0.40.0"
ic-auth-plugin-types.workspace = true
ic-identity-hsm = "0.40.0"
pico-args.workspace = true
pkcs11 = "0.5"
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
