[package]
name = "ic-auth-plugin-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
ic-transport-types.workspace = true
ic_principal.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
thiserror.workspace = true
